tests/machine/x/pascal/group_by_multi_join_sort.error
line: 154
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_multi_join_sort.pas
group_by_multi_join_sort.pas(114,11) Error: Identifier not found "o"
group_by_multi_join_sort.pas(116,20) Error: Identifier not found "o"
group_by_multi_join_sort.pas(117,15) Error: Identifier not found "l"
group_by_multi_join_sort.pas(119,24) Error: Identifier not found "l"
group_by_multi_join_sort.pas(119,39) Error: Identifier not found "o"
group_by_multi_join_sort.pas(120,19) Error: Identifier not found "n"
group_by_multi_join_sort.pas(122,28) Error: Identifier not found "n"
group_by_multi_join_sort.pas(123,30) Error: Identifier not found "o"
group_by_multi_join_sort.pas(123,75) Error: Identifier not found "o"
group_by_multi_join_sort.pas(124,38) Error: Identifier not found "l"
group_by_multi_join_sort.pas(126,51) Error: Identifier not found "g"
group_by_multi_join_sort.pas(127,48) Error: Identifier not found "g"
group_by_multi_join_sort.pas(129,28) Error: Identifier not found "g"
group_by_multi_join_sort.pas(131,49) Error: Illegal qualifier
group_by_multi_join_sort.pas(131,75) Error: Illegal qualifier
group_by_multi_join_sort.pas(131,32) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_multi_join_sort.pas(129,28) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_multi_join_sort.pas(134,51) Error: Identifier not found "g"
group_by_multi_join_sort.pas(135,48) Error: Identifier not found "g"
group_by_multi_join_sort.pas(136,51) Error: Identifier not found "g"
group_by_multi_join_sort.pas(137,49) Error: Identifier not found "g"
group_by_multi_join_sort.pas(138,51) Error: Identifier not found "g"
group_by_multi_join_sort.pas(141,28) Error: Identifier not found "g"
group_by_multi_join_sort.pas(143,51) Error: Illegal qualifier
group_by_multi_join_sort.pas(143,77) Error: Illegal qualifier
group_by_multi_join_sort.pas(143,33) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
group_by_multi_join_sort.pas(141,28) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_multi_join_sort.pas(17,19) Error: Can't read or write variables of this type
group_by_multi_join_sort.pas(154) Fatal: There were 28 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

